# PRGuard-AI

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  arbitrator_agent.py  logic_agent.py  security_agent.py  style_agent.py
analysis/: __init__.py  ast_parser.py  diff_parser.py  repo_indexer.py  repo_sandbox.py
cache/: __init__.py
confidence/: scoring_engine.py
config/: __init__.py  settings.py
cost/: budget_manager.py
dashboard/: __init__.py  app.py
db/: __init__.py
deploy/: docker-compose.prod.yml  prometheus.yml
docs/: architecture.md  example_review.md  runbook.md
evaluation/: evaluator.py
evaluation/dataset/: example_3.json  example_4.json  example_5.json
fixtures/: sample_diff.txt  sample_pr_payload.json
github/: app_auth.py  github_client.py  webhook_server.py
llm/: __init__.py  client.py
observability/: __init__.py  event_stream.py  logging.py  tracing.py
prompts/: logic_prompt.txt  security_prompt.txt  style_prompt.txt
queue/: __init__.py  redis_client.py  task_queue.py  task_registry.py
schemas/: agent_output.py  pr_report.py
scripts/: demo_pr_review.py  prguard_demo.py  run_benchmark.py  run_demo.sh  test_webhook.py
security/: rate_limiter.py
src/prguard_ai/: __init__.py  main.py
src/prguard_ai/agents/: arbitrator_agent.py  logic_agent.py  security_agent.py  style_agent.py
src/prguard_ai/analysis/: ast_parser.py  code_graph.py  container_runner.py  diff_parser.py  repo_indexer.py  repo_sandbox.py
src/prguard_ai/confidence/: __init__.py  scoring_engine.py
src/prguard_ai/config/: settings.py
src/prguard_ai/cost/: __init__.py  budget_manager.py
src/prguard_ai/dashboard/: app.py
src/prguard_ai/evaluation/: evaluator.py
src/prguard_ai/gh_client/: __init__.py  github_client.py  webhook_server.py
src/prguard_ai/github/: github_client.py  webhook_server.py
src/prguard_ai/llm/: client.py
src/prguard_ai/observability/: logging.py  (+3 more)
task_queue/: celery_app.py  redis_client.py
tests/: __init__.py  test_agents.py  test_diff_parser.py  test_full_pipeline.py  test_scoring_engine.py
(+12 files in other folders)
