[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prguard-ai"
version = "0.1.0"
description = "AI-powered pull request review system"
authors = [{name = "Your Name"}]
dependencies = []

[tool.setuptools.packages.find]
include = ["agents*", "analysis*", "confidence*", "schemas*", "github*", "observability*", "evaluation*", "dashboard*", "llm*", "config*"]
