[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prguard-ai"
version = "0.1.0"
description = "AI-powered multi-agent pull request review system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "PRGuard AI Maintainers"}
]
keywords = ["ai", "devtools", "code-review", "agents"]

dependencies = []

[project.optional-dependencies]
observability = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-grpc"
]

[tool.setuptools.packages.find]
include = [
  "agents*",
  "analysis*",
  "cache*",
  "config*",
  "confidence*",
  "cost*",
  "dashboard*",
  "db*",
  "evaluation*",
  "github*",
  "llm*",
  "observability*",
  "task_queue*",
  "reliability*",
  "security*",
  "schemas*"
]
